--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/thiago-pessini/Glitnir#readme",
   "dependencies": {
+    "node-schedule": "^1.3.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
